feat: Implement node deletion with descendants and update related services